tests/models/struct/unnamed/isize/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    isize
);
fn main() {}
